[gd_scene load_steps=5 format=3 uid="uid://d0nnf6m4pq68q"]

[ext_resource type="Script" uid="uid://73nt43y1k8qb" path="res://ui/dialog/confirm/dialog_confirm.gd" id="2_ngmx8"]
[ext_resource type="Script" uid="uid://dg8figbfpd7wl" path="res://ui/class/button/ui_button.gd" id="3_0jnfy"]

[sub_resource type="InputEventKey" id="InputEventKey_yobuf"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_04lmv"]
events = [SubResource("InputEventKey_yobuf")]

[node name="DialogConfirm" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -29.0
offset_right = 49.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_ngmx8")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ConfirmationLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 40)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="ConfirmButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "YES"
script = ExtResource("3_0jnfy")
metadata/_custom_type_script = "uid://dg8figbfpd7wl"

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
shortcut = SubResource("Shortcut_04lmv")
text = "NO"
script = ExtResource("3_0jnfy")
metadata/_custom_type_script = "uid://dg8figbfpd7wl"
